# pymawaqit

./: .gitignore  README.md  pyproject.toml
examples/: announcements.py  nearest_mosques.py  search_city.py  year_calendar.py
mawaqit_py/: __init__.py  _parse_helpers.py  _transport.py  constants.py  exceptions.py  headers.py  mawaqit.py  models.py  mosque.py  parsing.py
pymawaqit/: __init__.py  _transport.py  exceptions.py  headers.py  mawaqit.py  models.py  mosque.py  parsing.py
tests/: test_client.py  test_live.py  test_models.py  test_parsing.py
